--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,26 @@
-ansible==2.8.6
-asn1crypto==0.24.0
-bcrypt==3.1.7
+ansible==2.8.8
+ansible-modules-consul-acl==0.2.0
 cachetools==3.1.1
-certifi==2019.6.16
-cffi==1.12.3
+certifi==2019.11.28
+cffi==1.13.2
 chardet==3.0.4
-cryptography==2.7
+cryptography==2.8
+distro==1.4.0
 dnspython==1.16.0
-google-auth==1.6.3
+google-auth==1.7.1
 idna==2.8
-Jinja2==2.10.1
+Jinja2==2.10.3
 MarkupSafe==1.1.1
-mitogen==0.2.8
-paramiko==2.6.0
+mitogen==0.2.9
+netaddr==0.7.19
 proxmoxer==1.0.3
-pyasn1==0.4.6
-pyasn1-modules==0.2.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.7
 pycparser==2.19
-PyNaCl==1.3.0
-PyYAML==5.1.1
+pymongo==3.10.1
+PyYAML==5.2
 requests==2.22.0
 rsa==4.0
-six==1.12.0
-urllib3==1.25.3
+selinux==0.2.1
+six==1.13.0
+urllib3==1.25.7
